0.2.5
- fixed endless loop bug in select_by(), if the traversal hit
two mappers that referenced each other
- upgraded all unittests to insert './lib/' into sys.path, 
working around new setuptools PYTHONPATH-killing behavior

0.2.4
- try/except when the mapper sets init.__name__ on a mapped class,
supports python 2.3
- fixed bug where threadlocal engine would still autocommit
despite a transaction in progress
- lazy load and deferred load operations require the parent object
to be in a Session to do the operation; whereas before the operation
would just return a blank list or None, it now raises an exception.
- Session.update() is slightly more lenient if the session to which
the given object was formerly attached to was garbage collected;
otherwise still requires you explicitly remove the instance from 
the previous Session.
- fixes to mapper compilation, checking for more error conditions
- small fix to eager loading combined with ordering/limit/offset
- utterly remarkable:  added a single space between 'CREATE TABLE'
and '(<the rest of it>' since *thats how MySQL indicates a non-
reserved word tablename.....* [ticket:206]
- more fixes to inheritance, related to many-to-many relations
properly saving
- fixed bug when specifying explicit module to mysql dialect
- when QueuePool times out it raises a TimeoutError instead of
erroneously making another connection
- Queue.Queue usage in pool has been replaced with a locally
modified version (works in py2.3/2.4!) that uses a threading.RLock 
for a mutex.  this is to fix a reported case where a ConnectionFairy's 
__del__() method got called within the Queue's get() method, which 
then returns its connection to the Queue via the the put() method, 
causing a reentrant hang unless threading.RLock is used.
- postgres will not place SERIAL keyword on a primary key column
if it has a foreign key constraint
- cursor() method on ConnectionFairy allows db-specific extension
arguments to be propigated [ticket:221]